theme.css
/* ... */
.modal-bg,
.modal,
.prompt,
.document-search-container {
  animation: 0.5s 1 alternate fadein;
}
.modal-sidebar,
.modal.mod-settings .vertical-tab-header {
  border-right: none;
  padding: 2.5em 1em 1em 1.5em;
  margin: 0;
  background: var(--modal-background-vertical-tab-header);
  color: var(--color-text-interactive);
}
.modal-button-container {
  margin-top: 1em;
  padding-left: calc(var(--size-2-3) + 2em);
  padding-right: calc(var(--size-2-3) + 2em);
}
.modal-content {
  margin: 0 0;
  /* Space for modal-close-button in line with title */
  padding-left: calc(var(--size-2-3) + 2em);
  padding-right: calc(var(--size-2-3) + 2em);
  overflow: auto;
}
.modal-content p {
  margin: 0 0 0.5em 0;
}
.modal-content p:last-child {
  margin-bottom: 0;
}
.mod-sidebar-layout .modal-content {
  padding: 0;
  margin: 0;
}

/* Help modal */
.modal.mod-canvas-help .modal-content {
  height: 100%;
  overflow: scroll;
  padding-right: 1em;
}

/* Community modal */
.mod-community-modal .modal-sidebar {
  padding: 0;
}
.mod-community-modal .community-modal-controls {
  background: var(--theme-color-settingsBg);
  padding: 2.5em 1em 1em 0;
}
.mod-community-modal .community-modal-controls .setting-item {
  padding: 0;
  margin-bottom: 0.5em;
}
.mod-community-modal .community-modal-controls .setting-item:first-child {
  /* Filter control */
  max-width: var(--modal-community-sidebar-width);
  margin-bottom: 0.5em;
}
.community-modal-search-summary {
  margin: 0;
  padding: 0;
}
.community-modal-details {
  border: none;
}
.community-modal-search-results-wrapper {
  background: var(--modal-background-search-results);
  border: 0;
}
.community-modal-search-results {
  padding: 1.5em;
  gap: 1.5em;
}
.community-item {
  border: none;
  box-shadow: var(--shadow-l);
  background: var(--theme-color-communityItemBg)
}
.community-item:hover {
  background: var(--theme-color-communityItemBgHover);
  color: var(--nav-item-color-hover);
  font-weight: var(--nav-item-weight-hover);
}
.community-item.is-selected,
.community-item.is-selected:hover {
  background: var(--theme-color-communityItemBgSelected)
}
.community-item.mod-active {
  background: var(--theme-color-communityItemBgActive)
}
.community-item.is-selected .flair.mod-pop,
.community-item.is-selected:hover .flair.mod-pop,
.community-item.mod-active .flair.mod-pop,
.community-item.mod-active:hover .flair.mod-pop {
  display: none;
}
.community-item.is-selected,
.community-item.is-selected:hover,
.community-item.is-selected .community-item-author,
.community-item.is-selected:hover .community-item-author,
.community-item.is-selected .community-item-repo,
.community-item.is-selected:hover .community-item-repo,
.community-item.is-selected .community-item-downloads,
.community-item.is-selected:hover .community-item-downloads,
.community-item.is-selected .community-item-updated,
.community-item.is-selected:hover .community-item-updated {
  color: var(--text-normal);
}
.community-item.mod-active .community-item-author,
.community-item.mod-active:hover .community-item-author,
.community-item.mod-active .community-item-repo,
.community-item.mod-active:hover .community-item-repo,
.community-item.mod-active .community-item-downloads,
.community-item.mod-active:hover .community-item-downloads,
.community-item.mod-active .community-item-updated,
.community-item.mod-active:hover .community-item-updated {
    color: var(--text-on-accent);
    opacity: 0.8;
}

/* Messages */
.mod-warning,
p.mod-warning,
.setting-message {
  background: var(--theme-color-baseVeryVeryLightened);
  border-radius: var(--clickable-icon-radius);
  font-size: var(--font-ui-small);
  padding: 0.5em 1em;
}
p.mod-warning,.setting-message + p.mod-warning,.setting-message {
  margin-bottom: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}
p.mod-warning:has(+ p.mod-warning,.setting-message),
.setting-message:has(+ p.mod-warning,.setting-message) {
  border-top-left-radius: var(--clickable-icon-radius);
  border-top-right-radius: var(--clickable-icon-radius);
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

/* Settings modal */
.modal.mod-settings .vertical-tab-header-group {
  border-right: none;
  padding: 0 0 1.5em 0;
}
.modal.mod-settings .vertical-tab-header-group-title {
  padding: 0 0.5em 0.5em 0.5em;
}
.mod-settings .vertical-tab-content {
  background: var(--theme-color-settingsBg);
  padding: 2em;
}
.modal-setting-nav-bar {
  border: none;
  padding: 0.5em 0 0 0;
}
.setting-item {
  /* Also used when editing bookmarks */
  border-top: none;
  padding: 0;
  margin-bottom: 1.5em;
}

/* Font settings modal */
.setting-font-list + .setting-item {
  border: none;
}

/* Document search */
.document-search-container,
.mod-active .document-search-container {
  background: var(--background-secondary);
  border-radius: var(--radius-l);
  box-shadow: var(--shadow-s);
  margin: 0 auto;
}
.document-search-button {
  border: none;
  color: var(--color-text-interactive);
}

/* Content area */
.view-content > .markdown-source-view.mod-cm6 > .cm-editor > .cm-scroller {
  padding: 1em 2em 3em 2em;
  padding: 0;
}
.markdown-source-view.mod-cm6.is-readable-line-width .cm-sizer,
.markdown-preview-view.is-readable-line-width .markdown-preview-sizer {
  margin-left: 0;
  margin-right: 0;
  max-width: none;
  width: 100%;
}
.markdown-source-view.mod-cm6.is-readable-line-width .cm-sizer .cm-contentContainer,
.markdown-preview-view.is-readable-line-width .markdown-preview-sizer > div:not(.mod-header):not(.mod-footer):not(.markdown-preview-pusher) {
  margin: 3rem auto;
  max-width: var(--file-line-width);
  padding: 0 2rem;
  width: 100%;
}
/* Override inline styles */
.cm-content {
  /* Live Preview */
  padding-bottom: 0 !important;
}
.markdown-preview-sizer {
  /* Reading Mode */
  padding-bottom: 0 !important;
}

/* Order in content area */
.inline-title {
  order: 0;
}
.metadata-container,
.setting-properties-position-above .is-live-preview .metadata-container {
  order: 1;
}
/* ... */

